--- a/docs/static/simple.css
+++ b/docs/static/simple.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction:column;
   height: 100%;
-  color:##0055A4;
+  color:#0055A4;
   margin:60px 100px;
   font-family: Arial Narrow,Arial,sans-serif;
 
@@ -39,12 +39,15 @@
     font-size: 36px;
     text-align: left;
     padding: 5px;
+    font-weight: normal;
 }
 
-#nolink{
+.codelink.nolink{
   color:#d1d3de;
+  pointer-events: none;
 
 }
+
 a{
  text-decoration: none;
  color: black;
@@ -181,12 +184,12 @@ border-radius: 4px;
 width: 97px;
 height: 45px;
 color: #FFFFFF;
-font-size: 14px;
+font-size: 24px;
 font-weight: bold;
 font-style: normal;
 text-decoration: none;
 text-align: center;
-background: rgba(1,1,1,0.5);
+background: #0093D0;
 border: none;
 border-radius: 21px;
 margin-left: auto;
@@ -297,7 +300,7 @@ li{
 }
 
 
-#line{
+.line{
   border-right:1px solid black;
 }
 
